# ai-integrations

./: .envrc  README.md  bun.lockb  flake.nix  libopenraw.nix  package.json  shell.nix  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build.yml
src/: app.html  brand_theme.ts
src-macro-utils/: Cargo.toml
src-macro-utils/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hyprland_compat.rs  main.rs
src-tauri/src/ai/: openai.rs
src-tauri/src/builder/: builder.rs
src-tauri/src/ocr/: mod.rs  screenshot.rs  tauri.rs  tesseract.rs
src-tauri/src/status/: tauri.rs
src/lib/: index.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/windows/: +layout.svelte
src/routes/windows/area-selector/: +page.svelte
src/routes/windows/status-semaphore/: +page.svelte  +page.ts
