[package]
name = "macro-utils"
version = "0.1.0"
authors = ["DreamingCodes"]
repository = "https://github.com/Dreaming-Codes/ai-integrations"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.38"

[lib]
proc-macro = true
