[package]
name = "ai-integration"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0" }
macro-utils = { path = "../src-macro-utils" }
screenshots = "0.8.4"
anyhow = "1.0.75"
image = "0.24.7"
tesseract = "0.15.0"
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
once_cell = "1.18.0"
wasmer = { version = "4.2.3", default-features = false, features = ["sys", "llvm"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
