[package]
name = "ai-integration"
version = "0.0.0"
description = "This software permit you to integrate AI in your mondain pc usage letting you build your own AI shortcuts and commands with a simple-to-use node system"
authors = ["DreamingCodes"]
repository = "https://github.com/Dreaming-Codes/ai-integrations"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0" }
macro-utils = { path = "../src-macro-utils" }
screenshots = "0.8.5"
anyhow = "1.0.75"
image = "0.24.7"
tesseract = "0.15.0"
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
once_cell = "1.18.0"
wasmer = { version = "4.2.3", default-features = false, features = ["sys", "llvm"] }
hyprland = "0.3.12"
log = { version = "0.4.20", features = [] }
futures = "0.3.29"
async-openai = "0.17.1"
lazy_static = "1.4.0"
base64 = "0.21.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
